log
Fri Apr 17 06:33:53 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
d50e04f
Fri Apr 17 06:40:56 PM UTC 2026: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:78:17: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘bucket’; did you mean ‘buckets’?
   78 |         if(map->bucket[index]->key != NULL && is_equal(map->bucket[index]->key, key))
      |                 ^~~~~~
      |                 buckets
hashmap.c:78:61: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘bucket’; did you mean ‘buckets’?
   78 |         if(map->bucket[index]->key != NULL && is_equal(map->bucket[index]->key, key))
      |                                                             ^~~~~~
      |                                                             buckets
hashmap.c:74:10: error: unused variable ‘start’ [-Werror=unused-variable]
   74 |     long start = index;
      |          ^~~~~
cc1: all warnings being treated as errors
9be7cf7
